# NHWAVE

./: CHANGELOG  INSTALL.md
examples/lloyd_ibm/: log.txt
examples/tingkirby/: input.txt
src/: CMakeLists.txt  NHWAVE_HYPRE_StructMatrixSetBoxValues.c  NHWAVE_HYPRE_StructVectorGetBoxValues.c  NHWAVE_HYPRE_StructVectorSetBoxValues.c  deformable_slide.F  hypre_bind_device.c  hypre_utils.c  initialize.F  mod_global.F  mod_immersed.F  nhwave.F  nhwave_kirby.F  pressure.F  waves.F
src/cmake/modules/: FindHYPRE.cmake
